# CPPFramework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate.py
MyProject/: CMakeLists.txt
MyProject/cmake/: DefaultExecutable.cmake  DefaultLibrary.cmake  DefaultTest.cmake
MyProject/src/exe/HelloEIGEN/: main.cpp
MyProject/src/exe/HelloEIGEN2CV/: main.cpp
MyProject/src/exe/HelloOpenCV/: main.cpp
MyProject/src/exe/HelloWorld/: main.cpp
MyProject/src/lib/HelloIndirectLib/: HelloIndirectLib.cpp  HelloIndirectLib.h
MyProject/src/lib/HelloLib/: HelloLib.cpp  HelloLib.h
MyProject/src/lib/HelloOpenCVLib/: HelloOpenCVLib.cpp  HelloOpenCVLib.h
MyProject/src/test/HelloTest/: main.cpp
